--- a/afif-nginx.conf
+++ b/afif-nginx.conf
@@ -1,36 +1,25 @@
 
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
-
-
-events {
-    worker_connections  1024;
-}
-
-
-http {
-
 limit_req_zone $binary_remote_addr zone=one:10m rate=6r/m;
-limit_req zone=one burst=5 nodelay;
+limit_req_status 429;
+limit_req_log_level error;
+server {
+    listen 3000;
+    listen [::]:3000 afif.localhost:3000;
 
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    root /var/www/html;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    index index.html index.htm index.nginx-debian.html;
 
-    access_log  /var/log/nginx/access.log  main;
+    server_name afif.localhost:3000;
 
-    sendfile        on;
-    #tcp_nopush     on;
+    location / {
+    proxy_pass http://localhost:8000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
 
-    keepalive_timeout  65;
-
-    #gzip  on;
-
-    include /etc/nginx/conf.d/*.conf;
+    limit_req zone=one;
+    }
 }
